# aletheia

./: .actrc  .claude-session-notes.md  .dockerignore  .gitignore  .next-session-notes.md  .phase1-progress-review.md  .resume-here.md  .session-checkpoint.md  .session-review.md  .session-state.md  AGENTS.md  ALWAYS_PROOF_CHALLENGE.md  ALWAYS_PROOF_PROGRESS.md  ALWAYS_PROOF_SESSION6_STATUS.md  AND_OPERATOR_BUG_FIX.md  ARCHITECTURAL_ANALYSIS.md  ATOMIC_BUG_FIX.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  CLEANUP_PLAN.md  CODE_REVIEW_NAMING.md  COINDUCTIVE_RESEARCH_NOTES.md  CONTRIBUTING.md  DEFERRALS.md  DEPENDENCIES.md  DESIGN.md  DEVELOPMENT.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  DOCUMENTATION_STATUS.md  Dockerfile  Dockerfile.runtime  EXTENDED_LAMBDA_BLOCKER_EVIDENCE.md  INTEGRATION_TEST_RESULTS.md  LICENSE.md  NEXT_OPERATOR_BUG.md  NEXT_PROOF_STATUS.md  NEXT_SEMANTICS_ISSUE.md  NEXT_STEPS.md  NOT_OPERATOR_BUG_FIX.md  (+64 more)
AGENTS/: agda.md  (+6 more)
cpp/: .clang-format  .clang-tidy  CMakeLists.txt  README.md  sanitizer-ignorelist.txt
cpp/benchmarks/: benchmark.cpp  stability_bench.cpp
cpp/cmake/: aletheia-cpp-config.cmake.in
cpp/include/aletheia/: aletheia.hpp  backend.hpp  check.hpp  cli.hpp  client.hpp  dbc.hpp  enrich.hpp  error.hpp  excel.hpp  limits.hpp  log.hpp  ltl.hpp  response.hpp  types.hpp  validation.hpp  validation_issue.hpp  yaml.hpp
cpp/src/: backend.cpp  client.cpp  dbc.cpp  enrich.cpp  excel.cpp  ffi_backend.cpp  json_parse.cpp  json_serialize.cpp  mock_backend.cpp  rational_renderer.cpp  types.cpp  yaml.cpp
cpp/src/cli/: cli.cpp  main.cpp
cpp/src/detail/: ffi_logic.cpp  ffi_logic.hpp  json.hpp  loader_utils.cpp  loader_utils.hpp  mock_backend.hpp  rts_init.cpp  rts_init.hpp  rts_params.hpp
cpp/tests/: cli_tests.cpp  dbc_corpus_parity_tests.cpp  doc_example_tests.cpp  excel_tests.cpp  integration_tests.cpp  rts_heap_cap_workload.cpp  rts_init_renderer_first_tests.cpp  rts_init_renderer_uninitialized_tests.cpp  rts_setup_listener.cpp  static_tests.cpp  test_cross_binding_integration.cpp  test_feature_matrix_parity.cpp  test_helpers.hpp  test_log_events_parity.cpp  test_rts_heap_cap.cpp  test_rts_params_parity.cpp  test_wire_codes_parity.cpp  unit_tests.cpp  unit_tests_cancel.cpp  unit_tests_check.cpp  unit_tests_client.cpp  unit_tests_dbc.cpp  unit_tests_decimal.cpp  unit_tests_enrich.cpp  unit_tests_ffi_logic.cpp  unit_tests_input_bounds.cpp  unit_tests_json.cpp  unit_tests_log.cpp  unit_tests_property.cpp  unit_tests_validation.cpp  yaml_tests.cpp
cpp/tests/fuzz/: fuzz_decode_binary_frame.cpp  fuzz_parse_dbc_json.cpp  fuzz_parse_rational_number.cpp  fuzz_parse_response.cpp
haskell-shim/: Setup.hs  aletheia.cabal  ffi-exports.snapshot  runtime-closure.snapshot
haskell-shim/src/: AletheiaFFI.hs  Main.hs
haskell-shim/src/AletheiaFFI/: BinaryOutput.hs  Marshal.hs
haskell-shim/test/: ConstructorTest.hs
python/: .coverage  .pylintrc  README.md  pyproject.toml  test_dsl_api.py  vehicle_checks.xlsx
python/aletheia/: __init__.py  __main__.py  _binary.py  _check_conditions.py  _dbc_to_json_cantools.py  _dbc_types.py  _install_config.pyi  _loader_utils.py  _time_units.py  binary_client.py  binary_utils.py  can_log.py  checks.py  checks_runner.py  cli.py  client.py  dbc_converter.py  dbc_queries.py  decoder.py  dsl.py  error_codes.py  excel_loader.py  issue_codes.py  limits.py  ltl.py  protocols.py  signals.py  streaming_client.py  testing.py  types.py  validation.py  verifier.py  yaml_loader.py
python/aletheia/asyncio/: __init__.py  _client.py  testing.py
python/aletheia/client/: __init__.py  _backend.py  _client.py  _client_bin.py  _enrichment.py  _ffi.py  _helpers.py  _log.py  _mixin_state.py  _response_parsers.py  _signal_ops.py  _streaming.py  _types.py
python/aletheia/codes/: __init__.py  _error.py  _issue.py
python/aletheia/dbc/: __init__.py  _converter.py  _queries.py
python/benchmarks/: README.md  _common.py  batch_comparison.py  component_breakdown.py  latency.py  scaling.py  simplification.py  stability.py  sysinfo.py  throughput.py  violations.py
python/benchmarks/profiles/: baseline-2026-02-05.md  test_10000_frames.jsonl  test_1000_frames.jsonl  test_input.jsonl
python/stubs/atheris/: __init__.pyi
python/stubs/can/: __init__.pyi
python/stubs/cantools/: __init__.pyi
python/stubs/openpyxl/: __init__.pyi
python/stubs/yaml/: __init__.pyi
python/tests/: _canonical_dbc.py  _check_asserts.py  _cli_check_helpers.py  _dbc_helpers.py  _decimal_cases.py  _excel_helpers.py  _residency_child.py  _sbom_fixtures.py  _stream_helpers.py  _yaml_shape.py  conftest.py  test_agda_open_grammar.py  test_agda_open_grammar_generated.py  test_backend_protocol.py  test_batch.py  test_binary_extraction.py  test_bundle_validate.py  test_can_log.py  test_cancellation.py  test_canfd_brs_esi.py  test_check_action_pins.py  test_check_changelog.py  test_check_clang_tidy_coverage.py  test_check_dist_staging.py  test_check_docs.py  test_check_install_freshness.py  test_check_no_memory_citations.py  test_check_no_review_marks.py  test_check_proof_coverage.py  test_check_runtime_closure.py  test_check_sbom_coverage.py  test_check_wire_codes.py  test_check_workflow_permissions.py  test_checks.py  test_classify_satisfied_complete.py  test_cli.py  test_cli_check_decimal_rts.py  test_cli_check_error_frames.py  test_cli_check_excel.py  test_cli_parity.py  (+68 more)
python/tests/fuzz/: __init__.py  _atheris_runner.py  fuzz_dbc_to_json.py  (+2 more)
rust/: Cargo.toml  README.md
rust/examples/: bench_send_frame.rs  benchmark.rs
rust/excel/: Cargo.toml
rust/src/: async_client.rs  backend.rs  check.rs  dbc.rs  enrich.rs  error.rs  lib.rs  log.rs  ltl.rs  mock.rs  response.rs  types.rs  yaml.rs
rust/tests/: async_client.rs  builder.rs  checks.rs  dbc_model.rs  decimal_ssot.rs  enrichment.rs  feature_matrix.rs  frame_ops.rs  lazy_batch.rs  lifecycle.rs  log_events.rs  logging.rs  mock_backend.rs  rts_heap_cap.rs  rts_uninitialized.rs  symbol_cache.rs  symbol_missing.rs  typed_client.rs  wire_codes.rs  yaml_checks.rs
tools/agda-iwyu-reader/: .gitignore  Main.hs  agda-iwyu-reader.cabal
(+982 files in other folders)
