cabal-version:      3.12
name:               aletheia-build
version:            0.3.0.0
build-type:         Simple

executable shake
    main-is:          Shakefile.hs
    build-depends:
        base >= 4.18.3.0 && < 5,
        shake >= 0.19,
        directory,
        filepath,
        process
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-I0
