cabal-version:      3.12
-- SPDX-FileCopyrightText: 2025 Nicolas Pelletier
-- SPDX-License-Identifier: BSD-2-Clause
name:               aletheia-build
version:            1.1.1.0
build-type:         Simple

executable shake
    main-is:          Shakefile.hs
    build-depends:
        base >= 4.18.3.0 && < 5,
        shake >= 0.19,
        directory,
        filepath
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-I0
